# scratchpad

./: .gitignore  CMakeLists.txt  Makefile.am  configure.ac  main.cpp  scratchpad.hpp  xyz.openbmc_project.scratchpad.service
